// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Role Details Page Click on Resource Type 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container xlarge header StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="breadcrumbs"
      >
        <div>
          <a
            class="breadcrumb"
            href="/account/dummy/admin/access-control"
          >
            Access Control
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </div>
        <div>
          <a
            class="breadcrumb"
            href="/account/dummy/admin/access-control/roles"
          >
            Roles
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </div>
        <div>
          <span
            class="lastBreadcrumb"
          >
            name
          </span>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="nav-project-selected"
        >
          <svg
            height="40"
            viewBox="0 0 22 22"
            width="40"
          >
            <path
              d="M1.1 4.583L11 0l9.9 4.583v12.834L11 22l-9.9-4.583zm9 5.171l-7.2-3.33v9.811l7.2 3.338V9.754zm9 6.481V6.424l-7.2 3.33v9.819zm-1.462-11.15L11 2.012 4.362 5.085 11 8.157z"
              fill="#7dc7fb"
            />
          </svg>
        </span>
        <div
          class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-left-medium"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-medium"
          >
            name
          </p>
          <p
            class="StyledProps--font StyledProps--main"
          >
            description
          </p>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--padding-top-small"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
            >
              <span
                class="Tag--main"
              >
                <span
                  class="bp3-tag"
                  style="max-width: 120px;"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    ui
                  </span>
                </span>
              </span>
              <span
                class="Tag--main"
              >
                <span
                  class="bp3-tag"
                  style="max-width: 120px;"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    dev
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-small StyledProps--border StyledProps--border-right StyledProps--border-color-grey300"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          Created
        </p>
        dummy date
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-left-small"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          Last Updated
        </p>
        dummy date
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
  >
    <div
      class="Layout--horizontal StyledProps--main body"
    >
      <div
        class="StyledProps--font StyledProps--main resourceList"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex"
        >
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 Card--card card Card--interactive"
            data-testid="resourceCard-PROJECT_RESOURCES"
            tabindex="0"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="nav-project"
              >
                <svg
                  height="16"
                  viewBox="0 0 22 22"
                  width="16"
                >
                  <path
                    d="M1.1 4.583L11 0l9.9 4.583v12.834L11 22l-9.9-4.583zm9 5.171l-7.2-3.33v9.811l7.2 3.338V9.754zm9 6.481V6.424l-7.2 3.33v9.819zm-1.462-11.15L11 2.012 4.362 5.085 11 8.157z"
                    fill="#56778d"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
              >
                Project Resources
                 
              </p>
            </div>
          </div>
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 Card--card card Card--interactive"
            data-testid="resourceCard-ADMINSTRATIVE_FUNCTIONS"
            tabindex="0"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="nav-project"
              >
                <svg
                  height="16"
                  viewBox="0 0 22 22"
                  width="16"
                >
                  <path
                    d="M1.1 4.583L11 0l9.9 4.583v12.834L11 22l-9.9-4.583zm9 5.171l-7.2-3.33v9.811l7.2 3.338V9.754zm9 6.481V6.424l-7.2 3.33v9.819zm-1.462-11.15L11 2.012 4.362 5.085 11 8.157z"
                    fill="#56778d"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
              >
                Administrative Fucntions
                 
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-large"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--padding-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--padding-left-medium"
            >
              Update Role permissions
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-end"
            >
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Apply Changes
                </span>
              </button>
            </div>
          </div>
          <div>
            <div
              class="bp3-card bp3-elevation-0 Card--card card selectedCard"
            >
              <div
                class="Layout--vertical StyledProps--main StyledProps--padding-small"
                style="width: 100%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main permissionRow"
                  style="width: 100%;"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main center"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="nav-project"
                    >
                      <svg
                        height="20"
                        viewBox="0 0 22 22"
                        width="20"
                      >
                        <path
                          d="M1.1 4.583L11 0l9.9 4.583v12.834L11 22l-9.9-4.583zm9 5.171l-7.2-3.33v9.811l7.2 3.338V9.754zm9 6.481V6.424l-7.2 3.33v9.819zm-1.462-11.15L11 2.012 4.362 5.085 11 8.157z"
                          fill="#56778d"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold"
                    >
                      Project Resources
                    </p>
                  </div>
                </div>
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-top-large"
                >
                  <div
                    class="permissionRow groupRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--padding-left-large"
                    >
                      Secrets
                    </p>
                    <div
                      class="permissionList"
                    >
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          data-testid="checkBox-SECRET-create"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        create
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="bp3-card bp3-elevation-0 Card--card card"
            >
              <div
                class="Layout--vertical StyledProps--main StyledProps--padding-small"
                style="width: 100%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main permissionRow"
                  style="width: 100%;"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main center"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="nav-project"
                    >
                      <svg
                        height="20"
                        viewBox="0 0 22 22"
                        width="20"
                      >
                        <path
                          d="M1.1 4.583L11 0l9.9 4.583v12.834L11 22l-9.9-4.583zm9 5.171l-7.2-3.33v9.811l7.2 3.338V9.754zm9 6.481V6.424l-7.2 3.33v9.819zm-1.462-11.15L11 2.012 4.362 5.085 11 8.157z"
                          fill="#56778d"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold"
                    >
                      Administrative Fucntions
                    </p>
                  </div>
                </div>
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-top-large"
                >
                  <div
                    class="permissionRow groupRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--padding-left-large"
                    >
                      Organizations
                    </p>
                    <div
                      class="permissionList"
                    >
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-ORGANIZATION-edit"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        edit
                      </label>
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-ORGANIZATION-create"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        create
                      </label>
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-ORGANIZATION-delete"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        delete
                      </label>
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          data-testid="checkBox-ORGANIZATION-view"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        view
                      </label>
                    </div>
                  </div>
                  <div
                    class="permissionRow groupRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--padding-left-large"
                    >
                      Projects
                    </p>
                    <div
                      class="permissionList"
                    >
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-PROJECT-edit"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        edit
                      </label>
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-PROJECT-create"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        create
                      </label>
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-PROJECT-view"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        view
                      </label>
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-PROJECT-delete"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        delete
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Role Details Page render data 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container xlarge header StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="breadcrumbs"
      >
        <div>
          <a
            class="breadcrumb"
            href="/account/dummy/admin/access-control"
          >
            Access Control
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </div>
        <div>
          <a
            class="breadcrumb"
            href="/account/dummy/admin/access-control/roles"
          >
            Roles
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </div>
        <div>
          <span
            class="lastBreadcrumb"
          >
            name
          </span>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="nav-project-selected"
        >
          <svg
            height="40"
            viewBox="0 0 22 22"
            width="40"
          >
            <path
              d="M1.1 4.583L11 0l9.9 4.583v12.834L11 22l-9.9-4.583zm9 5.171l-7.2-3.33v9.811l7.2 3.338V9.754zm9 6.481V6.424l-7.2 3.33v9.819zm-1.462-11.15L11 2.012 4.362 5.085 11 8.157z"
              fill="#7dc7fb"
            />
          </svg>
        </span>
        <div
          class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-left-medium"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-medium"
          >
            name
          </p>
          <p
            class="StyledProps--font StyledProps--main"
          >
            description
          </p>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--padding-top-small"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
            >
              <span
                class="Tag--main"
              >
                <span
                  class="bp3-tag"
                  style="max-width: 120px;"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    ui
                  </span>
                </span>
              </span>
              <span
                class="Tag--main"
              >
                <span
                  class="bp3-tag"
                  style="max-width: 120px;"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    dev
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-small StyledProps--border StyledProps--border-right StyledProps--border-color-grey300"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          Created
        </p>
        dummy date
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-left-small"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          Last Updated
        </p>
        dummy date
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
  >
    <div
      class="Layout--horizontal StyledProps--main body"
    >
      <div
        class="StyledProps--font StyledProps--main resourceList"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex"
        >
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 Card--card card Card--interactive"
            data-testid="resourceCard-PROJECT_RESOURCES"
            tabindex="0"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="nav-project"
              >
                <svg
                  height="16"
                  viewBox="0 0 22 22"
                  width="16"
                >
                  <path
                    d="M1.1 4.583L11 0l9.9 4.583v12.834L11 22l-9.9-4.583zm9 5.171l-7.2-3.33v9.811l7.2 3.338V9.754zm9 6.481V6.424l-7.2 3.33v9.819zm-1.462-11.15L11 2.012 4.362 5.085 11 8.157z"
                    fill="#56778d"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
              >
                Project Resources
                 
              </p>
            </div>
          </div>
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 Card--card card Card--interactive"
            data-testid="resourceCard-ADMINSTRATIVE_FUNCTIONS"
            tabindex="0"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="nav-project"
              >
                <svg
                  height="16"
                  viewBox="0 0 22 22"
                  width="16"
                >
                  <path
                    d="M1.1 4.583L11 0l9.9 4.583v12.834L11 22l-9.9-4.583zm9 5.171l-7.2-3.33v9.811l7.2 3.338V9.754zm9 6.481V6.424l-7.2 3.33v9.819zm-1.462-11.15L11 2.012 4.362 5.085 11 8.157z"
                    fill="#56778d"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
              >
                Administrative Fucntions
                 
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-large"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--padding-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--padding-left-medium"
            >
              Update Role permissions
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-end"
            >
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Apply Changes
                </span>
              </button>
            </div>
          </div>
          <div>
            <div
              class="bp3-card bp3-elevation-0 Card--card card"
            >
              <div
                class="Layout--vertical StyledProps--main StyledProps--padding-small"
                style="width: 100%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main permissionRow"
                  style="width: 100%;"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main center"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="nav-project"
                    >
                      <svg
                        height="20"
                        viewBox="0 0 22 22"
                        width="20"
                      >
                        <path
                          d="M1.1 4.583L11 0l9.9 4.583v12.834L11 22l-9.9-4.583zm9 5.171l-7.2-3.33v9.811l7.2 3.338V9.754zm9 6.481V6.424l-7.2 3.33v9.819zm-1.462-11.15L11 2.012 4.362 5.085 11 8.157z"
                          fill="#56778d"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold"
                    >
                      Project Resources
                    </p>
                  </div>
                </div>
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-top-large"
                >
                  <div
                    class="permissionRow groupRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--padding-left-large"
                    >
                      Secrets
                    </p>
                    <div
                      class="permissionList"
                    >
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          data-testid="checkBox-SECRET-create"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        create
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="bp3-card bp3-elevation-0 Card--card card"
            >
              <div
                class="Layout--vertical StyledProps--main StyledProps--padding-small"
                style="width: 100%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main permissionRow"
                  style="width: 100%;"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main center"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="nav-project"
                    >
                      <svg
                        height="20"
                        viewBox="0 0 22 22"
                        width="20"
                      >
                        <path
                          d="M1.1 4.583L11 0l9.9 4.583v12.834L11 22l-9.9-4.583zm9 5.171l-7.2-3.33v9.811l7.2 3.338V9.754zm9 6.481V6.424l-7.2 3.33v9.819zm-1.462-11.15L11 2.012 4.362 5.085 11 8.157z"
                          fill="#56778d"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold"
                    >
                      Administrative Fucntions
                    </p>
                  </div>
                </div>
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-top-large"
                >
                  <div
                    class="permissionRow groupRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--padding-left-large"
                    >
                      Organizations
                    </p>
                    <div
                      class="permissionList"
                    >
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-ORGANIZATION-edit"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        edit
                      </label>
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-ORGANIZATION-create"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        create
                      </label>
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          data-testid="checkBox-ORGANIZATION-delete"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        delete
                      </label>
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-ORGANIZATION-view"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        view
                      </label>
                    </div>
                  </div>
                  <div
                    class="permissionRow groupRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--padding-left-large"
                    >
                      Projects
                    </p>
                    <div
                      class="permissionList"
                    >
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-PROJECT-edit"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        edit
                      </label>
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-PROJECT-create"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        create
                      </label>
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-PROJECT-view"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        view
                      </label>
                      <label
                        class="bp3-control bp3-checkbox checkbox"
                      >
                        <input
                          checked=""
                          data-testid="checkBox-PROJECT-delete"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        delete
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
